[tool.poetry]
name = "nonebot_plugin_memes_api"
version = "0.1.3"
description = "Nonebot2 plugin for making memes"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-memes-api"
repository = "https://github.com/noneplugin/nonebot-plugin-memes-api"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.0-rc.1", extras = ["fastapi"] }
nonebot-adapter-onebot = "^2.2.2"
nonebot-plugin-localstore = "^0.4.0"
httpx = ">=0.20.0,<1.0.0"
pypinyin = ">=0.44.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
