[tool.poetry]
name = "nonebot_plugin_memes_api"
version = "0.2.0"
description = "Nonebot2 plugin for making memes"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-memes-api"
repository = "https://github.com/noneplugin/nonebot-plugin-memes-api"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.0", extras = ["fastapi"] }
nonebot-plugin-send-anything-anywhere = ">=0.3.0,<1.0.0"
nonebot-plugin-alconna = ">=0.19.2,<1.0.0"
nonebot-plugin-session = "^0.2.0"
nonebot-plugin-userinfo = "^0.1.2"
nonebot-plugin-localstore = "^0.5.0"
httpx = ">=0.20.0,<1.0.0"
pypinyin = ">=0.44.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
nonebot-adapter-onebot = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
